Add initial version

--- a/landon/index.html
+++ b/landon/index.html
@@ -1,7 +1,15 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/landon.css">
+
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="http://d3js.org/d3.v3.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
   </head>
   <body>
+    <div id="container"></div>
+    <script type="text/javascript" src="js/landon.js"></script>
   </body>
 </html>
