--- a/landon/index.html
+++ b/landon/index.html
@@ -9,6 +9,19 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
   </head>
   <body>
+    <h1>Landon Donovan</h1>
+    <h2>Career Goals and Appearances</h2>
+    <div id="legend">
+      <div class="USA day">USA</div>
+      <div class="LosAngeles day">LA Galaxy</div>
+      <div class="SanJose day">San Jose Earthquakes</div>
+      <div class="Everton day">Everton</div>
+      <div class="MLSAll-Star day">MLS All-Star Team</div>
+      <div class="LeverkusenII day">Leverkusen II</div>
+      <div class="Leverkusen day">Leverkusen</div>
+      <div class="Bayern day">Bayern Munich</div>
+    </div>
+    
     <div id="container"></div>
     <script type="text/javascript" src="js/landon.js"></script>
   </body>
