--- a/landon/index.html
+++ b/landon/index.html
@@ -12,14 +12,14 @@
     <h1>Landon Donovan</h1>
     <h2>Career Goals and Appearances</h2>
     <div id="legend">
-      <div class="USA day">USA</div>
-      <div class="LosAngeles day">LA Galaxy</div>
-      <div class="SanJose day">San Jose Earthquakes</div>
-      <div class="Everton day">Everton</div>
-      <div class="MLSAll-Star day">MLS All-Star Team</div>
-      <div class="LeverkusenII day">Leverkusen II</div>
-      <div class="Leverkusen day">Leverkusen</div>
-      <div class="Bayern day">Bayern Munich</div>
+      <div class="USA_l">USA</div>
+      <div class="LosAngeles_l">LA Galaxy</div>
+      <div class="SanJose_l">San Jose Earthquakes</div>
+      <div class="Everton_l">Everton</div>
+      <div class="MLSAll-Star_l">MLS All-Star Team</div>
+      <div class="LeverkusenII_l">Leverkusen II</div>
+      <div class="Leverkusen_l">Leverkusen</div>
+      <div class="Bayern_l">Bayern Munich</div>
     </div>
     
     <div id="container"></div>
