--- a/landon/index.html
+++ b/landon/index.html
@@ -24,5 +24,9 @@
     
     <div id="container"></div>
     <script type="text/javascript" src="js/landon.js"></script>
+    
+    <div id="footer">
+      created by <a href="https://twitter.com/brycekahle">@brycekahle</a> and <a href="https://twitter.com/devinpleuler">@devinpleuler</a>.
+    </div>
   </body>
 </html>
