Legend fixes and footer info

--- a/landon/index.html
+++ b/landon/index.html
@@ -11,23 +11,33 @@
   </head>
   <body>
     <h1>Landon Donovan</h1>
-    <h2>Career Goals and Appearances</h2>
+    <h2>Career Goals and Appearances as of March 4th, 2014</h2>
     <div id="legend">
-      <div class="USA_l">USA</div>
-      <div class="LosAngeles_l">LA Galaxy</div>
-      <div class="SanJose_l">San Jose Earthquakes</div>
-      <div class="Everton_l">Everton</div>
-      <div class="MLSAll-Star_l">MLS All-Star Team</div>
-      <div class="LeverkusenII_l">Leverkusen II</div>
-      <div class="Leverkusen_l">Leverkusen</div>
-      <div class="Bayern_l">Bayern Munich</div>
+      <div class="clearfix"><div class="USA_l legend-box"></div>USA</div>
+      <div class="clearfix"><div class="LosAngeles_l legend-box"></div>LA Galaxy</div>
+      <div class="clearfix"><div class="SanJose_l legend-box"></div>San Jose Earthquakes</div>
+      <div class="clearfix"><div class="Everton_l legend-box"></div>Everton</div>
+      <div class="clearfix"><div class="MLSAll-Star_l legend-box"></div>MLS All-Star Team</div>
+      <div class="clearfix"><div class="LeverkusenII_l legend-box"></div>Leverkusen II</div>
+      <div class="clearfix"><div class="Leverkusen_l legend-box"></div>Leverkusen</div>
+      <div class="clearfix"><div class="Bayern_l legend-box"></div>Bayern Munich</div>
     </div>
     
     <div id="container"></div>
     <script type="text/javascript" src="js/landon.js"></script>
     
     <div id="footer">
-      created by <a href="https://twitter.com/brycekahle">@brycekahle</a> and <a href="https://twitter.com/devinpleuler">@devinpleuler</a>.
+      <p>Created by <a href="https://twitter.com/brycekahle">@brycekahle</a> and <a href="https://twitter.com/devinpleuler">@devinpleuler</a>.</p>
+
+      <p>All data obtained from public sources including the following websites and the <a href="https://archive.org/web/">Internet Wayback Machine</a>:</p>
+      <ul>
+        <li><a href="http://www.mlssoccer.com/players/landon-donovan">MLSSoccer.com</a></li>
+        <li><a href="http://espnfc.com/player/_/id/19107/landon-donovan?cc=5901">ESPN FC</a></li>
+        <li><a href="http://www.transfermarkt.com/en/landon-donovan/leistungsdaten/spieler_68.html">Transfermarkt</a></li>
+        <li><a href="http://us.soccerway.com/players/landon-donovan/666/matches/">Soccerway</a></li>
+
+      </ul>
+      <p>The resulting <a href="http://soccerlabs.github.io/landon/LandonGoals.csv">CSV file</a> is available to the public.</p>
     </div>
   </body>
 </html>
