--- a/landon/index.html
+++ b/landon/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <h1>Landon Donovan</h1>
+    <h2>Career Goals and Assists</h2>
     <div id="legend">
       <div class="clearfix"><div class="USA_l legend-box"></div>USA</div>
       <div class="clearfix"><div class="LosAngeles_l legend-box"></div>LA Galaxy</div>
